
schema {
  query: Query
  mutation: Mutation
}

type Query {
  asset(id: ID!): Asset
  assets(cursor: String, limit: Int = 100, filter: AssetFilter): AssetConnection!
  ipAddress(vrfId: ID!, address: String!): IPAddress
  dependencyImpact(rootId: ID!, depth: Int = 2): ImpactAnalysis!
}

type Mutation {
  reserveNextAvailableIP(input: ReserveIPInput!): IPReservation!
  createDiscoveryJob(input: DiscoveryJobInput!): Job!
}

type Asset { id: ID!, name: String!, status: String!, location: Location, relationships: [Relationship!]! }
type Location { site: String!, building: String, floor: String, room: String, row: String!, column: String!, x: Float, y: Float, z: Float, rack: String, unit: String }
type Relationship { type: String!, targetId: ID!, targetType: String! }
type IPAddress { id: ID!, vrfId: ID!, address: String!, status: String!, assignments: [Asset!]! }
type IPReservation { id: ID!, address: String!, vrfId: ID!, prefixId: ID!, expiresAt: String }
type Job { id: ID!, status: String!, createdAt: String! }
type ImpactAnalysis { rootId: ID!, nodes: [Asset!]!, edges: [Relationship!]!, spof: [String!]! }
type AssetConnection { edges: [AssetEdge!]!, pageInfo: PageInfo! }
type AssetEdge { cursor: String!, node: Asset! }
type PageInfo { hasNextPage: Boolean!, endCursor: String }
input AssetFilter { site: String, status: String, tag: String }
input ReserveIPInput { vrfId: ID!, prefixId: ID!, purpose: String!, idempotencyKey: String! }
input DiscoveryJobInput { scopeId: ID!, collectorGroupId: ID!, schedule: String }


# Extension v4.0.0
type DataGovernanceRule { id: ID!, domain: String!, attribute: String!, authoritativeSource: String!, priority: Int! }
type DataQualityFinding { id: ID!, rule: String!, severity: String!, resourceId: ID!, evidence: String! }
type FlowRule { id: ID!, source: String!, destination: String!, protocol: String!, port: Int!, justification: String! }
type CertificateInventoryItem { id: ID!, commonName: String!, expiresAt: String!, issuer: String!, risk: String! }
type NetworkConfigDrift { id: ID!, deviceId: ID!, rule: String!, severity: String!, evidence: String! }
type CostRecord { id: ID!, period: String!, amount: Float!, currency: String!, allocationTarget: String! }
type FieldOperationSheet { id: ID!, assetId: ID!, physicalPath: String!, status: String! }
type SimulationScenario { id: ID!, name: String!, status: String!, impactSummary: String! }
type SustainabilityReport { id: ID!, period: String!, energyKwh: Float!, carbonEstimate: Float! }
type SbomDocument { id: ID!, applicationId: ID!, format: String!, version: String!, hash: String! }
type KubernetesWorkload { id: ID!, clusterId: ID!, namespace: String!, name: String!, workloadType: String! }
type PolicyFinding { id: ID!, policyId: ID!, severity: String!, resourceId: ID!, evidence: String! }
