BEGIN;

CREATE EXTENSION IF NOT EXISTS pgcrypto;

CREATE TABLE IF NOT EXISTS tenants (
    id text PRIMARY KEY,
    display_name text NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now(),
    CHECK (id ~ '^[a-z0-9][a-z0-9_.-]{1,62}[a-z0-9]$')
);

CREATE TABLE IF NOT EXISTS sites (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    code text NOT NULL,
    name text NOT NULL,
    country char(2) NOT NULL,
    city text NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, code)
) PARTITION BY HASH (tenant_id);

CREATE TABLE IF NOT EXISTS sites_p00 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 0);
CREATE TABLE IF NOT EXISTS sites_p01 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 1);
CREATE TABLE IF NOT EXISTS sites_p02 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 2);
CREATE TABLE IF NOT EXISTS sites_p03 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 3);
CREATE TABLE IF NOT EXISTS sites_p04 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 4);
CREATE TABLE IF NOT EXISTS sites_p05 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 5);
CREATE TABLE IF NOT EXISTS sites_p06 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 6);
CREATE TABLE IF NOT EXISTS sites_p07 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 7);
CREATE TABLE IF NOT EXISTS sites_p08 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 8);
CREATE TABLE IF NOT EXISTS sites_p09 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 9);
CREATE TABLE IF NOT EXISTS sites_p10 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 10);
CREATE TABLE IF NOT EXISTS sites_p11 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 11);
CREATE TABLE IF NOT EXISTS sites_p12 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 12);
CREATE TABLE IF NOT EXISTS sites_p13 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 13);
CREATE TABLE IF NOT EXISTS sites_p14 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 14);
CREATE TABLE IF NOT EXISTS sites_p15 PARTITION OF sites FOR VALUES WITH (MODULUS 16, REMAINDER 15);

CREATE TABLE IF NOT EXISTS buildings (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    site_code text NOT NULL,
    code text NOT NULL,
    name text NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, site_code, code)
) PARTITION BY HASH (tenant_id);
CREATE TABLE IF NOT EXISTS buildings_p00 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 0);
CREATE TABLE IF NOT EXISTS buildings_p01 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 1);
CREATE TABLE IF NOT EXISTS buildings_p02 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 2);
CREATE TABLE IF NOT EXISTS buildings_p03 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 3);
CREATE TABLE IF NOT EXISTS buildings_p04 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 4);
CREATE TABLE IF NOT EXISTS buildings_p05 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 5);
CREATE TABLE IF NOT EXISTS buildings_p06 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 6);
CREATE TABLE IF NOT EXISTS buildings_p07 PARTITION OF buildings FOR VALUES WITH (MODULUS 8, REMAINDER 7);

CREATE TABLE IF NOT EXISTS rooms (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    site_code text NOT NULL,
    building_code text NOT NULL,
    code text NOT NULL,
    name text NOT NULL,
    rows text[] NOT NULL,
    columns text[] NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, site_code, building_code, code),
    CHECK (array_length(rows, 1) >= 1),
    CHECK (array_length(columns, 1) >= 1)
) PARTITION BY HASH (tenant_id);
CREATE TABLE IF NOT EXISTS rooms_p00 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 0);
CREATE TABLE IF NOT EXISTS rooms_p01 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 1);
CREATE TABLE IF NOT EXISTS rooms_p02 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 2);
CREATE TABLE IF NOT EXISTS rooms_p03 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 3);
CREATE TABLE IF NOT EXISTS rooms_p04 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 4);
CREATE TABLE IF NOT EXISTS rooms_p05 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 5);
CREATE TABLE IF NOT EXISTS rooms_p06 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 6);
CREATE TABLE IF NOT EXISTS rooms_p07 PARTITION OF rooms FOR VALUES WITH (MODULUS 8, REMAINDER 7);

CREATE TABLE IF NOT EXISTS racks (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    site_code text NOT NULL,
    building_code text NOT NULL,
    room_code text NOT NULL,
    code text NOT NULL,
    row_code text NOT NULL,
    column_code text NOT NULL,
    units integer NOT NULL,
    coordinate_x numeric(12, 3),
    coordinate_y numeric(12, 3),
    coordinate_z numeric(12, 3),
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, site_code, building_code, room_code, code),
    CHECK (units BETWEEN 1 AND 60),
    CHECK ((coordinate_x IS NULL AND coordinate_y IS NULL AND coordinate_z IS NULL)
        OR (coordinate_x IS NOT NULL AND coordinate_y IS NOT NULL AND coordinate_z IS NOT NULL))
) PARTITION BY HASH (tenant_id);
CREATE TABLE IF NOT EXISTS racks_p00 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 0);
CREATE TABLE IF NOT EXISTS racks_p01 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 1);
CREATE TABLE IF NOT EXISTS racks_p02 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 2);
CREATE TABLE IF NOT EXISTS racks_p03 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 3);
CREATE TABLE IF NOT EXISTS racks_p04 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 4);
CREATE TABLE IF NOT EXISTS racks_p05 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 5);
CREATE TABLE IF NOT EXISTS racks_p06 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 6);
CREATE TABLE IF NOT EXISTS racks_p07 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 7);
CREATE TABLE IF NOT EXISTS racks_p08 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 8);
CREATE TABLE IF NOT EXISTS racks_p09 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 9);
CREATE TABLE IF NOT EXISTS racks_p10 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 10);
CREATE TABLE IF NOT EXISTS racks_p11 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 11);
CREATE TABLE IF NOT EXISTS racks_p12 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 12);
CREATE TABLE IF NOT EXISTS racks_p13 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 13);
CREATE TABLE IF NOT EXISTS racks_p14 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 14);
CREATE TABLE IF NOT EXISTS racks_p15 PARTITION OF racks FOR VALUES WITH (MODULUS 16, REMAINDER 15);

CREATE TABLE IF NOT EXISTS equipment (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    asset_tag text NOT NULL,
    name text NOT NULL,
    site_code text NOT NULL,
    building_code text NOT NULL,
    room_code text NOT NULL,
    row_code text NOT NULL,
    column_code text NOT NULL,
    rack_code text,
    u_position integer,
    coordinate_x numeric(12, 3),
    coordinate_y numeric(12, 3),
    coordinate_z numeric(12, 3),
    version bigint NOT NULL DEFAULT 1,
    created_at timestamptz NOT NULL DEFAULT now(),
    updated_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, asset_tag),
    CHECK (u_position IS NULL OR u_position BETWEEN 1 AND 60),
    CHECK ((rack_code IS NULL AND u_position IS NULL) OR rack_code IS NOT NULL),
    CHECK ((coordinate_x IS NULL AND coordinate_y IS NULL AND coordinate_z IS NULL)
        OR (coordinate_x IS NOT NULL AND coordinate_y IS NOT NULL AND coordinate_z IS NOT NULL))
) PARTITION BY HASH (tenant_id);
CREATE TABLE IF NOT EXISTS equipment_p00 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 0);
CREATE TABLE IF NOT EXISTS equipment_p01 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 1);
CREATE TABLE IF NOT EXISTS equipment_p02 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 2);
CREATE TABLE IF NOT EXISTS equipment_p03 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 3);
CREATE TABLE IF NOT EXISTS equipment_p04 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 4);
CREATE TABLE IF NOT EXISTS equipment_p05 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 5);
CREATE TABLE IF NOT EXISTS equipment_p06 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 6);
CREATE TABLE IF NOT EXISTS equipment_p07 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 7);
CREATE TABLE IF NOT EXISTS equipment_p08 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 8);
CREATE TABLE IF NOT EXISTS equipment_p09 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 9);
CREATE TABLE IF NOT EXISTS equipment_p10 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 10);
CREATE TABLE IF NOT EXISTS equipment_p11 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 11);
CREATE TABLE IF NOT EXISTS equipment_p12 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 12);
CREATE TABLE IF NOT EXISTS equipment_p13 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 13);
CREATE TABLE IF NOT EXISTS equipment_p14 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 14);
CREATE TABLE IF NOT EXISTS equipment_p15 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 15);
CREATE TABLE IF NOT EXISTS equipment_p16 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 16);
CREATE TABLE IF NOT EXISTS equipment_p17 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 17);
CREATE TABLE IF NOT EXISTS equipment_p18 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 18);
CREATE TABLE IF NOT EXISTS equipment_p19 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 19);
CREATE TABLE IF NOT EXISTS equipment_p20 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 20);
CREATE TABLE IF NOT EXISTS equipment_p21 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 21);
CREATE TABLE IF NOT EXISTS equipment_p22 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 22);
CREATE TABLE IF NOT EXISTS equipment_p23 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 23);
CREATE TABLE IF NOT EXISTS equipment_p24 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 24);
CREATE TABLE IF NOT EXISTS equipment_p25 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 25);
CREATE TABLE IF NOT EXISTS equipment_p26 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 26);
CREATE TABLE IF NOT EXISTS equipment_p27 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 27);
CREATE TABLE IF NOT EXISTS equipment_p28 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 28);
CREATE TABLE IF NOT EXISTS equipment_p29 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 29);
CREATE TABLE IF NOT EXISTS equipment_p30 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 30);
CREATE TABLE IF NOT EXISTS equipment_p31 PARTITION OF equipment FOR VALUES WITH (MODULUS 32, REMAINDER 31);

CREATE TABLE IF NOT EXISTS vrfs (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    name text NOT NULL,
    route_distinguisher text,
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, name)
) PARTITION BY HASH (tenant_id);
CREATE TABLE IF NOT EXISTS vrfs_p00 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 0);
CREATE TABLE IF NOT EXISTS vrfs_p01 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 1);
CREATE TABLE IF NOT EXISTS vrfs_p02 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 2);
CREATE TABLE IF NOT EXISTS vrfs_p03 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 3);
CREATE TABLE IF NOT EXISTS vrfs_p04 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 4);
CREATE TABLE IF NOT EXISTS vrfs_p05 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 5);
CREATE TABLE IF NOT EXISTS vrfs_p06 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 6);
CREATE TABLE IF NOT EXISTS vrfs_p07 PARTITION OF vrfs FOR VALUES WITH (MODULUS 8, REMAINDER 7);

CREATE TABLE IF NOT EXISTS prefixes (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    vrf_name text NOT NULL,
    cidr cidr NOT NULL,
    first_usable inet NOT NULL,
    last_usable inet NOT NULL,
    description text NOT NULL DEFAULT '',
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, vrf_name, cidr)
) PARTITION BY HASH (tenant_id);
CREATE TABLE IF NOT EXISTS prefixes_p00 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 0);
CREATE TABLE IF NOT EXISTS prefixes_p01 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 1);
CREATE TABLE IF NOT EXISTS prefixes_p02 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 2);
CREATE TABLE IF NOT EXISTS prefixes_p03 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 3);
CREATE TABLE IF NOT EXISTS prefixes_p04 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 4);
CREATE TABLE IF NOT EXISTS prefixes_p05 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 5);
CREATE TABLE IF NOT EXISTS prefixes_p06 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 6);
CREATE TABLE IF NOT EXISTS prefixes_p07 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 7);
CREATE TABLE IF NOT EXISTS prefixes_p08 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 8);
CREATE TABLE IF NOT EXISTS prefixes_p09 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 9);
CREATE TABLE IF NOT EXISTS prefixes_p10 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 10);
CREATE TABLE IF NOT EXISTS prefixes_p11 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 11);
CREATE TABLE IF NOT EXISTS prefixes_p12 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 12);
CREATE TABLE IF NOT EXISTS prefixes_p13 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 13);
CREATE TABLE IF NOT EXISTS prefixes_p14 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 14);
CREATE TABLE IF NOT EXISTS prefixes_p15 PARTITION OF prefixes FOR VALUES WITH (MODULUS 16, REMAINDER 15);

CREATE TABLE IF NOT EXISTS ip_reservations (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    vrf_name text NOT NULL,
    prefix_cidr cidr NOT NULL,
    address inet NOT NULL,
    hostname text NOT NULL,
    idempotency_key text NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, id),
    UNIQUE (tenant_id, vrf_name, idempotency_key),
    UNIQUE (tenant_id, vrf_name, address)
) PARTITION BY HASH (tenant_id);
CREATE TABLE IF NOT EXISTS ip_reservations_p00 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 0);
CREATE TABLE IF NOT EXISTS ip_reservations_p01 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 1);
CREATE TABLE IF NOT EXISTS ip_reservations_p02 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 2);
CREATE TABLE IF NOT EXISTS ip_reservations_p03 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 3);
CREATE TABLE IF NOT EXISTS ip_reservations_p04 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 4);
CREATE TABLE IF NOT EXISTS ip_reservations_p05 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 5);
CREATE TABLE IF NOT EXISTS ip_reservations_p06 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 6);
CREATE TABLE IF NOT EXISTS ip_reservations_p07 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 7);
CREATE TABLE IF NOT EXISTS ip_reservations_p08 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 8);
CREATE TABLE IF NOT EXISTS ip_reservations_p09 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 9);
CREATE TABLE IF NOT EXISTS ip_reservations_p10 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 10);
CREATE TABLE IF NOT EXISTS ip_reservations_p11 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 11);
CREATE TABLE IF NOT EXISTS ip_reservations_p12 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 12);
CREATE TABLE IF NOT EXISTS ip_reservations_p13 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 13);
CREATE TABLE IF NOT EXISTS ip_reservations_p14 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 14);
CREATE TABLE IF NOT EXISTS ip_reservations_p15 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 15);
CREATE TABLE IF NOT EXISTS ip_reservations_p16 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 16);
CREATE TABLE IF NOT EXISTS ip_reservations_p17 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 17);
CREATE TABLE IF NOT EXISTS ip_reservations_p18 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 18);
CREATE TABLE IF NOT EXISTS ip_reservations_p19 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 19);
CREATE TABLE IF NOT EXISTS ip_reservations_p20 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 20);
CREATE TABLE IF NOT EXISTS ip_reservations_p21 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 21);
CREATE TABLE IF NOT EXISTS ip_reservations_p22 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 22);
CREATE TABLE IF NOT EXISTS ip_reservations_p23 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 23);
CREATE TABLE IF NOT EXISTS ip_reservations_p24 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 24);
CREATE TABLE IF NOT EXISTS ip_reservations_p25 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 25);
CREATE TABLE IF NOT EXISTS ip_reservations_p26 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 26);
CREATE TABLE IF NOT EXISTS ip_reservations_p27 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 27);
CREATE TABLE IF NOT EXISTS ip_reservations_p28 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 28);
CREATE TABLE IF NOT EXISTS ip_reservations_p29 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 29);
CREATE TABLE IF NOT EXISTS ip_reservations_p30 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 30);
CREATE TABLE IF NOT EXISTS ip_reservations_p31 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 31);
CREATE TABLE IF NOT EXISTS ip_reservations_p32 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 32);
CREATE TABLE IF NOT EXISTS ip_reservations_p33 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 33);
CREATE TABLE IF NOT EXISTS ip_reservations_p34 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 34);
CREATE TABLE IF NOT EXISTS ip_reservations_p35 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 35);
CREATE TABLE IF NOT EXISTS ip_reservations_p36 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 36);
CREATE TABLE IF NOT EXISTS ip_reservations_p37 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 37);
CREATE TABLE IF NOT EXISTS ip_reservations_p38 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 38);
CREATE TABLE IF NOT EXISTS ip_reservations_p39 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 39);
CREATE TABLE IF NOT EXISTS ip_reservations_p40 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 40);
CREATE TABLE IF NOT EXISTS ip_reservations_p41 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 41);
CREATE TABLE IF NOT EXISTS ip_reservations_p42 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 42);
CREATE TABLE IF NOT EXISTS ip_reservations_p43 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 43);
CREATE TABLE IF NOT EXISTS ip_reservations_p44 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 44);
CREATE TABLE IF NOT EXISTS ip_reservations_p45 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 45);
CREATE TABLE IF NOT EXISTS ip_reservations_p46 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 46);
CREATE TABLE IF NOT EXISTS ip_reservations_p47 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 47);
CREATE TABLE IF NOT EXISTS ip_reservations_p48 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 48);
CREATE TABLE IF NOT EXISTS ip_reservations_p49 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 49);
CREATE TABLE IF NOT EXISTS ip_reservations_p50 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 50);
CREATE TABLE IF NOT EXISTS ip_reservations_p51 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 51);
CREATE TABLE IF NOT EXISTS ip_reservations_p52 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 52);
CREATE TABLE IF NOT EXISTS ip_reservations_p53 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 53);
CREATE TABLE IF NOT EXISTS ip_reservations_p54 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 54);
CREATE TABLE IF NOT EXISTS ip_reservations_p55 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 55);
CREATE TABLE IF NOT EXISTS ip_reservations_p56 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 56);
CREATE TABLE IF NOT EXISTS ip_reservations_p57 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 57);
CREATE TABLE IF NOT EXISTS ip_reservations_p58 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 58);
CREATE TABLE IF NOT EXISTS ip_reservations_p59 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 59);
CREATE TABLE IF NOT EXISTS ip_reservations_p60 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 60);
CREATE TABLE IF NOT EXISTS ip_reservations_p61 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 61);
CREATE TABLE IF NOT EXISTS ip_reservations_p62 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 62);
CREATE TABLE IF NOT EXISTS ip_reservations_p63 PARTITION OF ip_reservations FOR VALUES WITH (MODULUS 64, REMAINDER 63);

CREATE TABLE IF NOT EXISTS audit_events (
    id uuid NOT NULL DEFAULT gen_random_uuid(),
    tenant_id text NOT NULL REFERENCES tenants(id),
    actor text NOT NULL,
    action text NOT NULL,
    target_type text NOT NULL,
    target_id text NOT NULL,
    severity text NOT NULL,
    metadata jsonb NOT NULL DEFAULT '{}'::jsonb,
    created_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (tenant_id, created_at, id),
    CHECK (severity IN ('info', 'warning', 'error', 'critical'))
) PARTITION BY RANGE (created_at);

CREATE TABLE IF NOT EXISTS audit_events_2026 PARTITION OF audit_events
    FOR VALUES FROM ('2026-01-01') TO ('2027-01-01');
CREATE TABLE IF NOT EXISTS audit_events_2027 PARTITION OF audit_events
    FOR VALUES FROM ('2027-01-01') TO ('2028-01-01');

CREATE INDEX IF NOT EXISTS idx_sites_tenant_code ON sites (tenant_id, code);
CREATE INDEX IF NOT EXISTS idx_rooms_location ON rooms (tenant_id, site_code, building_code, code);
CREATE INDEX IF NOT EXISTS idx_racks_location ON racks (tenant_id, site_code, building_code, room_code, row_code, column_code);
CREATE INDEX IF NOT EXISTS idx_equipment_location ON equipment (tenant_id, site_code, building_code, room_code, row_code, column_code);
CREATE INDEX IF NOT EXISTS idx_equipment_asset_tag ON equipment (tenant_id, asset_tag);
CREATE INDEX IF NOT EXISTS idx_prefixes_lookup ON prefixes (tenant_id, vrf_name, cidr);
CREATE INDEX IF NOT EXISTS idx_ip_reservations_lookup ON ip_reservations (tenant_id, vrf_name, prefix_cidr, address);
CREATE INDEX IF NOT EXISTS idx_ip_reservations_idempotency ON ip_reservations (tenant_id, vrf_name, idempotency_key);
CREATE INDEX IF NOT EXISTS idx_audit_events_target ON audit_events (tenant_id, target_type, target_id, created_at DESC);
CREATE INDEX IF NOT EXISTS idx_audit_events_action ON audit_events (tenant_id, action, created_at DESC);
CREATE INDEX IF NOT EXISTS idx_audit_events_metadata ON audit_events USING gin (metadata);

COMMIT;
