@startuml
entity Tenant { *id : uuid name : citext }
entity Asset { *id : uuid tenant_id : uuid name : citext status : text }
entity Room { *id : uuid site_id : uuid name : citext }
entity Rack { *id : uuid room_id : uuid row : text column : text x : numeric y : numeric z : numeric }
entity VRF { *id : uuid tenant_id : uuid name : citext rd : text }
entity Prefix { *id : uuid vrf_id : uuid prefix : cidr status : text }
entity IPAddress { *id : uuid vrf_id : uuid address : inet status : text }
entity Interface { *id : uuid asset_id : uuid name : citext mac : macaddr }
Tenant ||--o{ Asset
Room ||--o{ Rack
Rack ||--o{ Asset
Tenant ||--o{ VRF
VRF ||--o{ Prefix
VRF ||--o{ IPAddress
Asset ||--o{ Interface
Interface ||--o{ IPAddress
@enduml
